k8s-deployment/services/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: ghcr.io/sortedstartup/course-k8s-top-down/nodejs-app:180117718656234858b587e16f51a0f0f41cad00
        # ports:
        # - containerPort: 3000
